<resources>
    <string name="app_name">SetupWizard</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="welcome_to_grapheneos">Welcome to GrapheneOS</string>
    <string name="grapheneos_icon">GrapheneOS icon</string>
    <string name="grapheneos_desc">Privacy and security, crafted for your mobile device, usable by everyone.</string>
    <string name="lets_setup_your_device">Let\'s set up your device in a few steps.</string>
    <string name="lets_setup_your_profile">Let\'s set up your user profile in a few steps.</string>
    <string name="english_united_states">English (United States)</string>
    <string name="accessibility">Accessibility</string>
    <string name="emergency_call">Emergency call</string>
    <string name="connect_to_wi_fi">Connect to Wi-Fi</string>
    <string name="set_up_without_wi_fi">Set up without Wi-Fi</string>
    <string name="connect">Connect</string>
    <string name="choose_your_language">Choose your language</string>
    <string name="location_services">Location services</string>
    <string name="location_access_title">Use location</string>
    <string name="location_access_desc">Allow apps that have asked your permission to use your location information. This may include your current location and past locations.</string>
    <string name="network_location_enabled_title">Network location</string>
    <string name="network_location_enabled_desc">Enable network location to determine your location better (such as when indoors) and more efficiently. Nearby wireless signal identifiers will be sent to an Apple server through a GrapheneOS proxy only when network location is being used.</string>
    <string name="wifi_scanning_always_available_enabled_title">Wi-Fi scanning always available</string>
    <string name="wifi_scanning_always_available_enabled_desc">Allow apps and services with permission to scan for Wi-Fi networks to do so even when Wi-Fi is off. For example, when network location is on, this allows it to scan for Wi-Fi networks even when Wi-Fi is off, improving location accuracy.</string>
    <string name="geocoder_enabled_title">Geocoder</string>
    <string name="geocoder_enabled_desc">Enable geocoder to allow apps to use a network-based service hosted by GrapheneOS to convert between geographic coordinates and human-readable addresses. Some apps need this for critical functionality.</string>
    <string name="restore_apps_and_data"><![CDATA[Restore apps & data]]></string>
    <string name="data_restore_desc">If you have a backup from your previous GrapheneOS device, you can restore it here.</string>
    <string name="you_re_all_set_now">You\'re all set now!</string>
    <string name="device_setup_done_desc">You\'re ready to start using your device</string>
    <string name="profile_setup_done_desc">You\'re ready to start using your user profile</string>
    <string name="set_up_a_secondary_unlock_method">Set up a secondary unlock method</string>
    <string name="set_up_fingerprint_unlock">Set up fingerprint unlock</string>
    <string name="optionally_set_up_face_unlock">Optionally set up face unlock</string>
    <string name="set_up">Set up</string>
    <string name="start">Start</string>
    <string name="date_and_time">Date and time</string>
    <string name="date_and_time_desc">Set your time zone and adjust current date and time if needed</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="time_zone">Time zone</string>
    <string name="select_time_zone">Select time zone</string>
    <string name="select_a_network">Select a network</string>
    <string name="cancel">Cancel</string>
    <string name="restore">Restore</string>
    <string name="swipe_gestures_title">Swipe to navigate your phone</string>
    <string name="swipe_gestures_desc">Learn gestures to go home, go back and switch between apps</string>
    <string name="try_it">Try it</string>
    <string name="oem_unlocked_warning">The bootloader is unlocked and software integrity can not be guaranteed. Any data stored on this device may be available to attackers. Do not store any sensitive data on this device.</string>
    <string name="visit_this_link_on_another_device">Visit this link on another device:</string>
    <string name="oem_lock_url" translatable="false">grapheneos.org/UBL</string>
    <string name="lock_your_bootloader">Lock your bootloader</string>
    <string name="oem_unlock_fullscreen_desc">
        The bootloader is unlocked and software integrity
        can not be guaranteed. Any data stored on this device may be available to attackers.
        Do not store any sensitive data on this device.\n\nLocking the bootloader at a later stage
        will wipe all the data on this device. To keep the data safe and secure we advice you to
        lock the bootloader before setting up the device.\n\nTo lock your bootloader, visit
        the link below on another device for instructions and then press \"Reboot to bootloader\":
    </string>
    <string name="reboot_to_bootloader">Reboot to bootloader</string>
    <string name="continue_without_locking">Continue without locking</string>
    <string name="continue_without_locking_timer">Continue without locking (%d)</string>
    <string name="oem_unlock_ack_risks">I understand the security risks of not locking my bootloader.</string>
    <string name="disable_oem_unlocking">Disable OEM unlocking</string>
    <string name="disable_oem_unlocking_desc">It\'s recommended to disable OEM unlocking to improve device security</string>

    <!-- MDM QR provisioning -->
    <plurals name="qr_provision_toast">
        <item quantity="one">%1$s more tap to start QR code setup</item>
        <item quantity="other">%1$s more taps to start QR code setup</item>
    </plurals>
    <string name="qr_provisioning_cancelled">QR provisioning cancelled</string>
    <string name="provisioning_title">Device provisioning</string>
    <string name="provisioning_desc">Set up a work device by installing the mobile device management (MDM) application</string>
    <string name="provisioning_powered">Powered by Headwind MDM</string>
    <string name="preparing_provisioning">Provisioning the device&#8230;</string>
    <string name="qr_parse_failed">Failed to parse the QR code contents!</string>
    <string name="qr_missing_parameter">QR code parameter missing:&#160;</string>
    <string name="setting_up_wifi">Setting up the WiFi connection&#8230;</string>
    <string name="wifi_failed">Failed to set up the WiFi connection!</string>
    <string name="downloading_admin_app">Downloading the MDM application&#8230;</string>
    <string name="download_progress">%1$.1f of %2$.1f Mb</string>
    <string name="download_failed">Failed to download the MDM application!&#160;</string>
    <string name="checksum_failed">Failed to validate the MDM application - checksum is incorrect!</string>
    <string name="installing_admin_app">Installing the MDM application&#8230;</string>
    <string name="install_failed">Failed to install the MDM application!&#160;</string>
    <string name="install_successful">MDM application is installed!</string>
    <string name="error_title">Error</string>
    <string name="button_ok">OK</string>
    <string name="button_reset">Reset</string>
</resources>
