<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingVertical="50dp">

    <ImageView
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:contentDescription="@string/data_restore_icon"
        android:src="@drawable/baseline_restore" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/restore_apps_and_data"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
        android:textColor="@color/white" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/data_restore_desc"
        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
        android:textColor="@color/white" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:backgroundTint="@color/black"
            android:text="@string/skip"
            android:textAppearance="@style/TextAppearance.Material3.BodySmall"
            android:textColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:backgroundTint="@color/button_highlight_blue"
            android:text="@string/next"
            android:textColor="@color/black"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>
</LinearLayout>