<?xml version="1.0" encoding="utf-8"?>

<com.google.android.setupdesign.GlifLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/glif_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/provisioning_powered"
        android:layout_gravity="top"
        android:layout_marginLeft="24dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/spinning_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/text_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preparing_provisioning"
            android:layout_marginBottom="16dp"
            />

        <ProgressBar
            android:id="@+id/linear_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginBottom="4dp"
            android:max="100"
            android:visibility="gone"
            style="?android:attr/progressBarStyleHorizontal"/>

        <TextView
            android:id="@+id/progress_legend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="48dp"
            android:gravity="left"
            android:visibility="gone"
            android:text="@string/download_progress"
            />

    </LinearLayout>

</com.google.android.setupdesign.GlifLayout>
