<?xml version="1.0" encoding="utf-8"?>

<com.google.android.setupdesign.GlifLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/glif_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/timezone_container"
            style="@style/SudContentFrame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="vertical"
            android:paddingTop="@dimen/sud_content_frame_padding_bottom">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_zone"
                android:textAppearance="@style/TextAppearance.SudMaterialYouItemTitle" />

            <TextView
                android:id="@+id/timezone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.SudMaterialYouItemSummary" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/date_container"
            style="@style/SudContentFrame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="vertical"
            android:paddingTop="@dimen/sud_content_frame_padding_bottom">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textAppearance="@style/TextAppearance.SudMaterialYouItemTitle" />

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.SudMaterialYouItemSummary" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/time_container"
            style="@style/SudContentFrame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="vertical"
            android:paddingTop="@dimen/sud_content_frame_padding_bottom">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textAppearance="@style/TextAppearance.SudMaterialYouItemTitle" />

            <TextView
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.SudMaterialYouItemSummary" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/SudGlifButtonBar.Stackable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/next"
            style="@style/SudGlifButton.Primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next" />
    </LinearLayout>
</com.google.android.setupdesign.GlifLayout>